--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
     height: 150px;
     background-color: green;
     display: block;
+    margin-bottom: 20px;
 }
 
 .side-nav {
@@ -15,19 +16,16 @@
     width: 200px;
     background-color: blue;
     display: inline-block;
-    margin-top: 20px;
-    margin-right: 10px;
+    margin-right: 20px;
     vertical-align: top;
 }
 
 .main {
     height: 400px;
-    width: 705px;
+    width: 700px;
     background-color: red;
     display: inline-block;
     padding: 10px;
-    margin-top: 20px;
-    margin-left: 10px;
     vertical-align: top;
 }
 .sub-content {
@@ -35,13 +33,13 @@
     width: 210px;
     background-color: yellow;
     display: inline-block;
-    margin: 5px;
+    margin: 10px;
 }
 #advertisement {
     height: 120px;
     width: 660px;
     background-color: purple;
     display: block;
-    margin: 5px;
+    margin: 10px;
 }
 
