--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
     width: 700px;
     background-color: red;
     display: inline-block;
-    padding: 10px;
+    padding: 13px;
     vertical-align: top;
 }
 .sub-content {
@@ -33,13 +33,13 @@
     width: 210px;
     background-color: yellow;
     display: inline-block;
-    margin: 10px;
+    margin-right: 10px;
 }
 #advertisement {
     height: 120px;
     width: 660px;
     background-color: purple;
     display: block;
-    margin: 10px;
+    margin-top: 15px;
 }
 
